tests/baselines/reference/templateStringsArrayTypeNotDefinedES5Mode.errors.txt
tests/cases/compiler/templateStringsArrayTypeNotDefinedES5Mode.ts(5,3): error TS2345: Argument of type '{ [x: number]: undefined; }' is not assignable to parameter of type 'TemplateStringsArray'.
  Property 'raw' is missing in type '{ [x: number]: undefined; }'.


==== tests/cases/compiler/templateStringsArrayTypeNotDefinedES5Mode.ts (1 errors) ====
    
    function f(x: TemplateStringsArray, y: number, z: number) {
    }
    
    f({}, 10, 10);
      ~~
!!! error TS2345: Argument of type '{ [x: number]: undefined; }' is not assignable to parameter of type 'TemplateStringsArray'.
!!! error TS2345:   Property 'raw' is missing in type '{ [x: number]: undefined; }'.
    
    f `abcdef${ 1234 }${ 5678 }ghijkl`;